# seq32

./: .bzrignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  SEQ24  SEQ32  TODO  aclocal.m4  configure  configure.ac  configure.in  seq32usr.example
arch/: PKGBUILD
arch/package/: PKGBUILD
doc/help/: CMakeLists.txt  contact.html  help.html  license.html  main_window.html  options_window.html  playlist_mode.html  seq32rc.html  seq32usr.html  sequence_editor.html  song_editor.html  what_why.html  who.html
icons/: CMakeLists.txt  Makefile.am  seq32.desktop
man/: CMakeLists.txt  Makefile  Makefile.in  Module.am  seq24.1
src/: CMakeLists.txt  HelpWindow.cpp  HelpWindow.h  Makefile.am  Makefile.in  Module.am  config.h.in  configdefault.h  configfile.cpp  configfile.h  configwin32.h  controllers.h  dump.cpp  event.cpp  event.h  font.cpp  font.h  globals.h  keybindentry.cpp  keybindentry.h  lash.cpp  lash.h  lfownd.cpp  lfownd.h  maintime.cpp  maintime.h  mainwid.cpp  mainwid.h  mainwnd.cpp  mainwnd.h  mastermidibus_factory.cpp  mastermidibus_factory.h  mastermidibus_iface.h  midibus.cpp  midibus.h  midibus_alsa.cpp  midibus_alsa.h  midibus_jack.cpp  midibus_jack.h  midibus_portmidi.cpp  (+50 more)
src/pixmaps/: Module.am  chord.xpm  jack.xpm  menu.xpm  seq32.xpm  seq32_32.xpm  seq32_playlist.xpm  seq32_setlist.xpm  transpose.xpm
