dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/event.cpp)

AM_CONFIG_HEADER(src/config.h)

AM_INIT_AUTOMAKE(seq24, 0.8.7)

AC_DEFINE(_GNU_SOURCE, 1, [gnu source])

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.
AC_CHECK_LIB(rt,main, ,    
	AC_MSG_ERROR([POSIX.1b RealTime Library Missing -lrt]))

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(select)

AM_PATH_ALSA(0.9.0)

####AM_PATH_GTKMM(1.2.0) OLD

PKG_CHECK_MODULES(DEPS, gtkmm-2.4 >= 2.4.0)
AC_SUBST(DEPS_CFLAGS)
AC_SUBST(DEPS_LIBS)

dnl
dnl     JACK SUPPORT
dnl
jack_support=yes
                                                                                                                 
AC_ARG_ENABLE(jack-support, [AS_HELP_STRING(--disable-jack-support, [Compile without JACK support])], [jack_support=$enableval])

JACK_SUPPORT=0
                                                                                                                 
if test "$jack_support" != "no"; then
                                                                                                                 
        PKG_CHECK_MODULES(JACK, jack >= 0.90.0, jack_found="yes", jack_found="no")
        if test "$jack_found" = "yes"; then
                JACK_SUPPORT=1
                AC_DEFINE(JACK_SUPPORT, 1, [Define to enable JACK driver])
                USER_LDFLAGS="${USER_LDFLAGS} $(pkg-config --libs jack )"
                                                                                                                 
                features_list="${features_list} (Jack)"
        else
                AC_MSG_WARN([ *** Could not find the JACK library, disabling JACK support])
        fi
fi

AC_SUBST(JACK_CFLAGS)
AC_SUBST(JACK_LIBS)


dnl
dnl    LASH SUPPORT
dnl
lash_support="yes"
AC_ARG_ENABLE(lash,
        [AS_HELP_STRING(--enable-lash, [Enable LASH session management support (true)])],
        [ if test x$enable_lash = xno ; then lash_support=no ; fi ])

lash_found="no"
if test "$lash_support" = "yes"; then
    PKG_CHECK_MODULES(LASH, lash-1.0 >= 0.5.0, lash_found="yes", lash_found="no")
	if test "$lash_found" = "yes"; then
		AC_DEFINE(LASH_SUPPORT, 1, [Define to enable LASH support])
		AC_SUBST(LASH_CFLAGS)
		AC_SUBST(LASH_LIBS)
	else
        AC_MSG_WARN([ *** LASH not found, session support will not be built.])
	fi
else
	AC_MSG_WARN([ *** LASH support not enabled.]);
fi


AC_OUTPUT(Makefile src/Makefile)


