
install (FILES help.html
    contact.html 
    license.html
    main_window.html
    options_window.html
    playlist_mode.html 
    seq32rc.html
    seq32usr.html
    sequence_editor.html
    song_editor.html
    what_why.html
    who.html
    DESTINATION share/doc/seq32/html)


install (DIRECTORY images/
    DESTINATION share/doc/seq32/html/images)